k8s/ingressclass.yaml
# ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: gce
spec:
  controller: k8s.io/ingress-gce
