k8s/was-deployment.yaml
# was-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-was
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-was
      tier: backend
  template:
    metadata:
      labels:
        app: petclinic-was
        tier: backend
    spec:
      containers:
      - name: petclinic
        # 업로드한 WAS 이미지 사용 
        # Google repo 사용 
        image: asia-northeast3-docker.pkg.dev/kdt2-final-project-t1/gitactions-hjh/gitactions:v1.0.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "120Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5         # 응답을 5초 기다림
          failureThreshold: 5
