k8s/web-deployment.yaml
# web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-web
  namespace: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic-web
      tier: frontend
  template:
    metadata:
      labels:
        app: petclinic-web
        tier: frontend
    spec:
      containers:
      - name: nginx
        # 업로드 한 이미지 사용 
        # GAR 용 
        image: asia-northeast3-docker.pkg.dev/kdt2-final-project-t1/gitactions-hjh/web:v1    
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5         # 응답을 5초 기다림
          failureThreshold: 5
