k8s/web-ingress-service.yaml
# petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic
  annotations:
    # ALB 설정
    # GKE 전용 설정 
    kubernetes.io/ingress.class: "gce"
    cloud.google.com/neg: '{"ingress": true}'
    kubernetes.io/ingress.allow-http: "true" 

    
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic-web-service
            port:
              number: 80
